src/test/ui/consts/const-labeled-break.stderr
error[E0019]: constant contains unimplemented expression type
  --> $DIR/const-labeled-break.rs:6:19
   |
LL | const CRASH: () = 'a: while break 'a {};
   |                   ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0019`.
